# lazy-aws

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: credentials.rs  lib.rs  main.rs
src/aws/: exec.rs  mod.rs  runner.rs  types.rs
src/config/: mod.rs
src/logger/: mod.rs
src/ui/: app.rs  fuzzy.rs  keys.rs  layout.rs  messages.rs  mod.rs  text.rs
src/ui/components/: choice.rs  confirm.rs  help.rs  input.rs  spinner.rs  statusbar.rs  tabbar.rs
src/ui/panels/: buckets.rs  clusters.rs  containers.rs  detail.rs  instances.rs  log_groups.rs  log_streams.rs  log_viewer.rs  mod.rs  objects.rs  output.rs  query_results.rs  rds_instances.rs  rds_tables.rs  services.rs  tasks.rs  terminal.rs
src/ui/style/: mod.rs  styles.rs  theme.rs
